# Game-engines

./: .gitignore  resources2.cfg
GameEnginesPractice/: CMakeLists.txt  pawn.lua
GameEnginesPractice/GameEnginesPractice/: CMakeLists.txt
GameEnginesPractice/GameEnginesPractice/Header_Files/: Bullet.h  CelestialBody.h  ControlSystems.h  FileSystem.h  Framework.h  Game.h  GameEnginesPractice.h  GameObject.h  GeneralDefines.h  GeneralSystems.h  IMoveable.h  Input.h  InputHandler.h  MTQueue.h  MeshSystems.h  PhysSystems.h  RenderEngine.h  RenderThread.h  Resource.h  ResourceManager.h  SceneObject.h  SceneObjectProducer.h  Universe.h  flecs.h
GameEnginesPractice/GameEnginesPractice/Header_Files/AdjacentSystems/: FileSystem.h  GEFile.h  Input.h  InputHandler.h  ProjectLoader.h
GameEnginesPractice/GameEnginesPractice/Header_Files/ECS/: ControlECS.h  GeneralECS.h  KinematicsECS.h  MeshECS.h  PhysECS.h  ScriptECS.h
GameEnginesPractice/GameEnginesPractice/Header_Files/Render/: RenderEngine.h  RenderThread.h
GameEnginesPractice/GameEnginesPractice/Header_Files/ScriptSystem/: EntityManager.h  LuaBridge.h  Script.h  ScriptManager.h
GameEnginesPractice/GameEnginesPractice/Header_Files/WindowManagement/: EditorWindow.h
GameEnginesPractice/GameEnginesPractice/Scripts/: Test.lua
GameEnginesPractice/GameEnginesPractice/Source_Files/: Bullet.cpp  CelestialBody.cpp  ControlSystems.cpp  FileSystem.cpp  Game.cpp  GameEnginesPractice.cpp  GameObject.cpp  GameTimer.cpp  GeneralSystems.cpp  InputHandler.cpp  MTQueue.cpp  MeshSystems.cpp  PhysSystems.cpp  RenderEngine.cpp  RenderThread.cpp  ResourceManager.cpp  SceneObject.cpp  SceneObjectProducer.cpp  flecs.c
GameEnginesPractice/GameEnginesPractice/Source_Files/AdjacentSystems/: FileSystem.cpp  GameTimer.cpp  InputHandler.cpp  ProjectLoader.cpp
GameEnginesPractice/GameEnginesPractice/Source_Files/ECS/: ControlECS.cpp  GeneralECS.cpp  KinematicsECS.cpp  MeshECS.cpp  PhysECS.cpp  ScriptECS.cpp  flecs.c
GameEnginesPractice/GameEnginesPractice/Source_Files/Render/: MTQueue.cpp  RenderEngine.cpp  RenderThread.cpp
GameEnginesPractice/GameEnginesPractice/Source_Files/ScriptSystem/: EntityManager.cpp  Script.cpp  ScriptManager.cpp
GameEnginesPractice/GameEnginesPractice/Source_Files/WindowManagement/: EditorWindow.cpp
